Fix spacing issue

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -28,7 +28,6 @@ main {
         border-bottom: 2px solid #979797;
     }
     .page-section {
-        margin-left: 100px;
         width: 100%;
         height: 100%;
     }
