--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -24,9 +24,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
-        margin-left: 200px;
-        margin-right: 200px;
+        justify-content: space-around;
         width: 100%;
         a {
             text-decoration: none;
