--- a/src/sass/_splash.scss
+++ b/src/sass/_splash.scss
@@ -4,6 +4,7 @@
         display: flex;
         justify-content: center;
         position: relative;
+        padding-left: 203px;
         img {
             height: 400px;
             margin-top: 50px;
@@ -14,7 +15,7 @@
             font-style: italic;
             font-size: 100px;
             position: absolute;
-            left: 100px;
+            left: 203px;
             top: 100px;
         }
     }
